@@ -292,6 +292,7 @@ AC_OUTPUT()
 $PERL subst summary
 $PERL subst scripts/process_perfdata.pl 
 $PERL subst scripts/rrd_convert.pl 
+$PERL subst scripts/rrd_modify.pl 
 $PERL subst scripts/rc.npcd 
 $PERL subst scripts/rc.pnp_gearman_worker 
 $PERL subst scripts/check_pnp_rrds.pl 
