@@ -3,13 +3,14 @@
   * Bugfix:  logging.c include missing header files ( Lars Vogdt )       
   * Bugfix:  Check if pnp4nagios/etc/rra.cfg is readable
   * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
+  * Feature: rrd_modify.pl to change number of data sources of an RRD file
 
 **pnp-0.6.16 11/21/2011**
   * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
   * Bugfix:  Append missing slash to perfdata_spool_dir ( Reported by Juergen-Michael Radtke ) 
   * Bugfix:  Fixed jQuery-ui multisite theme
   * Feature: PDF margins are now adjustable via config.php ( Thomas Witzenrath )
-  * Featire: Support for PDF size 'letter' added ( Robert Becht )
+  * Feature: Support for PDF size 'letter' added ( Robert Becht )
 
 **pnp-0.6.15 09/15/2011**
   * Bugfix:  Fixed Overview link (reported by Stefan Triep)
